# geospatial-nix

./: .gitignore  CUSTOMIZED-PACKAGES.md  DEVELOPMENT.md  README.md  checks.nix  default.nix  flake.nix  overrides.nix  repl.nix  shells.nix  templates.nix
.github/workflows/: build-images.yml  build-packages.yml  build-templates.yml  build.yml  flake-update.yml  publish-flake.yml  release.yml  test-container-funct.yml  test-containers.yml  test-custom-images.yml  test-custom-packages.yml  test-examples.yml  test-geonixcli.yml  test-images.yml  test-init.yml  test-integration.yml  test-nixos.yml  test-python-versions.yml  test-shell-environments.yml  test-shell-funct.yml  test-shells.yml  test-templates.yml  test.yml  update-flake.yml  update-packages.yml  update-version.yml
examples/python-web/: README.md  flake.nix  geonix.nix
examples/python-web-app/: .gitignore  devenv.nix  devenv.yaml  poetry.toml
examples/simple/: .gitignore  (+4 more)
lib/: customize-packages.nix  default.nix  dev-shell.nix  pgadmin-shell.nix  postgresql-client-shell.nix  postgresql-container.nix  postgresql-shell.nix  psql-shell.nix  python-container.nix  python-shell.nix
modules/: default.nix  devenv.nix  foo.nix  foo2.nix  pg_featureserv.nix  pg_tileserv.nix
templates/python-app/: README.md  flake.nix  pyproject.toml
templates/python-app/app/: __init__.py
templates/python-web-app-example/: README.md  deployment.nix  docker-compose.yml  flake.nix  pyproject.toml
templates/python-web-app-example/app/: __init__.py
utils/: nix-build-all.sh  nixpkgs-diff.sh  pull-nixpkgs.sh  update-version.sh
(+152 files in other folders)
