[tool.poetry]
name = "app"
version = "0.1.0"
description = "Example app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]

[tool.poetry.scripts]
run-app = "app.__init__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
