[tool.poetry]
name = "app"
version = "0.1.0"
description = "Example app"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.11.4"
black = "^22.12.0"

[tool.poetry.scripts]
run-app = "app.__init__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
