[tool.poetry]
name = "python-app"
version = "0.1.0"
description = "Example Python web application"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "python_app", from = "src"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
flask = "^2.2.2"

[tool.poetry.group.dev.dependencies]
black = "*"
isort = "*"
pytest = "*"

[tool.poetry.scripts]
app = "python_app.__init__:run"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
